--- a/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/CustomListItem.axml
+++ b/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/CustomListItem.axml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
+<!--
+    List Item textview
+    -->
     <TextView
         android:id="@+id/tvListItem"
         android:layout_width="match_parent"
@@ -10,5 +14,5 @@
         android:textSize="28dp"
         android:textColor="#005DA9"
         android:layout_margin="10dp"
-        android:text="hello" />
-</RelativeLayout>
+        android:text="" />
+</LinearLayout>
