--- a/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/ShowVisualizationDataLayout.axml
+++ b/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/ShowVisualizationDataLayout.axml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
-
-  <com.github.mikephil.charting.charts.LineChart
-    android:id="@+id/linechart"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="15dp"
-    />
-
+<!--
+    Line chart
+    -->
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/linechart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="15dp" />
 </LinearLayout>
