--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/VisualizationLayout.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/VisualizationLayout.axml
@@ -1,18 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
-    android:weightSum="1">
-<!--
+    android:background="#ffffff">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ffffff"
+        android:isScrollContainer="true"
+        android:weightSum="1">
+    <!--
     Visualization data listview
     -->
-    <ListView
-        android:id="@+id/lvData"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:divider="#005DA9"
-        android:dividerHeight="5dp" />
-</LinearLayout>
+        <ListView
+            android:id="@+id/lvData"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:divider="#005DA9"
+            android:dividerHeight="5dp" />
+        <Button
+            android:id="@+id/btnShowChart"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Show Chart"
+            android:fontFamily="Assets/SourceSansPro-Light.tff"
+            android:textSize="20dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:layout_gravity="bottom"
+            android:layout_margin="10dp"
+            android:textColor="#ffffff"
+            android:background="#005DA9" />
+    </LinearLayout>
+</ScrollView>
