--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/VisualizationLayout.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/VisualizationLayout.axml
@@ -11,6 +11,18 @@
         android:isScrollContainer="true"
         android:weightSum="1">
     <!--
+        Header
+        -->
+        <TextView
+            android:textSize="32dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:text="Choose option(s)"
+            android:gravity="center_horizontal"
+            android:id="@+id/tvHeaderVisualization" />
+    <!--
     Visualization data listview
     -->
         <ListView
@@ -23,8 +35,8 @@
         <Button
             android:id="@+id/btnShowChart"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Show Chart"
+            android:layout_height="match_parent"
+            android:text="Visualize"
             android:fontFamily="Assets/SourceSansPro-Light.tff"
             android:textSize="20dp"
             android:gravity="center_horizontal|center_vertical"
